[gd_scene load_steps=7 format=2]

[ext_resource path="res://world/PipeNode.gd" type="Script" id=1]
[ext_resource path="res://assets/plant_meshes/pipenode_straight.tres" type="ArrayMesh" id=2]
[ext_resource path="res://plants/components/AdjacentAreaCasts.tscn" type="PackedScene" id=3]
[ext_resource path="res://plants/components/PipeBuildIndicators.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/Selectable.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[node name="PipeNode" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0418916, 0 )
cast_shadow = 0
mesh = ExtResource( 2 )
material/0 = null
material/1 = null

[node name="Selectable" parent="." instance=ExtResource( 5 )]

[node name="PipeBuildIndicators" parent="." instance=ExtResource( 4 )]
visible = false

[node name="AreaCasts" parent="." instance=ExtResource( 3 )]

[node name="Hitbox" type="Area" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 1 )
[connection signal="deselected" from="Selectable" to="." method="_on_deselected"]
[connection signal="selected" from="Selectable" to="." method="_on_selected"]
